--- a/src/app/views/admin/fields.njk
+++ b/src/app/views/admin/fields.njk
@@ -2,12 +2,17 @@
 <div class="item">
     <div>Recipe's image</div>
     <div>
-        <input 
-            type="url" 
-            name="image" 
-            placeholder="put here the url of the image"
-            value="{{ recipe.image }}"    
+        <div id="photos-upload">
+            <input 
+            type="file" 
+            name="photos" 
+            multiple
+            accept="image/*"
+            onchange="PhotosUpload.handleFileInput(event)"
         >
+        <p>Selecione até 5 imagens</p>
+        </div>
+        <div id="photos-preview"></div>
     </div>
 </div>
 
