--- a/public/style.css
+++ b/public/style.css
@@ -636,3 +636,34 @@ form .item #photos-upload input {
   opacity: 0;
   cursor: pointer;
 }
+
+form .item #photos-preview img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+#photos-preview .photo {
+  position: relative;
+}
+
+#photos-preview .photo i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.8);
+  color: red;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 500%;
+  cursor: pointer;
+  transition: opacity 200ms;
+  opacity: 0;
+}
+
+#photos-preview .photo:hover i {
+  opacity: 1;
+}
