--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -8,6 +8,7 @@
   {% endblock head %}
   <link rel="stylesheet" href="/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"      rel="stylesheet">
 </head>
 <body>
   <header class="container">
