feat: preview style create photos, done

--- a/public/style.css
+++ b/public/style.css
@@ -610,18 +610,28 @@ form .item #photos-upload {
   position: relative;
   display: block;
   overflow: hidden;
-  width: 200px;
+  width: 150px;
+  height: 100%;
+  margin-right: 8px;
   
 }
 
-form .item #photos-upload p {
-  padding: 8px 16px;
-  border-radius: 4px;
-  box-shadow: 0 2px 2px -6px #333;
-  background-color: var(--color-text-primary);
-  color: white;
-  width: 100%;
-  text-align: center;
+form .item #photos-upload i {
+  background: rgba(255, 255, 255, 0.8);
+  color: grey;
+  top: 0;
+  left: 0;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 300%;
+  cursor: pointer;
+  transition: opacity 200ms;
+  opacity: 1;
+  border: solid 1px lightgrey;
+  margin-top: 8px;
 
 }
 
@@ -637,10 +647,19 @@ form .item #photos-upload input {
   cursor: pointer;
 }
 
-form .item #photos-preview img {
+form .item #photos-preview {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 8px;
   width: 100%;
+  margin: 8px 0;
+}
+
+form .item #photos-preview img {
+  width: 150px;
   height: 150px;
   object-fit: cover;
+  border-radius: 4px;
 }
 
 #photos-preview .photo {
@@ -658,7 +677,7 @@ form .item #photos-preview img {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 500%;
+  font-size: 300%;
   cursor: pointer;
   transition: opacity 200ms;
   opacity: 0;
@@ -666,4 +685,9 @@ form .item #photos-preview img {
 
 #photos-preview .photo:hover i {
   opacity: 1;
+}
+
+#photos-upload-preview {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr)
 }
