--- a/src/app/views/admin/fields.njk
+++ b/src/app/views/admin/fields.njk
@@ -1,7 +1,7 @@
 
 <div class="item">
     <div>Recipe's image</div>
-    <div>
+    <div id="photos-upload-preview">
         <div id="photos-upload">
             <input 
             type="file" 
@@ -10,7 +10,7 @@
             accept="image/*"
             onchange="PhotosUpload.handleFileInput(event)"
         >
-        <p>Selecione até 5 imagens</p>
+        <i class="material-icons">add</i>
         </div>
         <div id="photos-preview"></div>
     </div>
