--- a/src/app/views/admin/create.njk
+++ b/src/app/views/admin/create.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card container" method="POST" action="/admin">
+<form class="card container" method="POST" action="/admin" enctype="multipart/form-data">
     <section>
         <div class="create_recipe">
         <h3>Creating a new recipe</h3>
