--- a/src/app/views/admin/edit.njk
+++ b/src/app/views/admin/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card container" method="POST" action="/admin?_method=PUT">
+<form class="card container" method="POST" action="/admin?_method=PUT" enctype="multipart/form-data">
     <section>
         <div class="wrapper_edit">
             <div class="create_recipe">
