fix: edit multer

--- a/src/app/views/chefs/edit.njk
+++ b/src/app/views/chefs/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card container" method="POST" action="/chefs?_method=PUT">
+<form class="card container" method="POST" action="/chefs?_method=PUT" enctype="multipart/form-data">
     <section>
         <div class="wrapper_edit">
         <div class="create_recipe">
