--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card container" method="POST" action="/chefs">
+<form class="card container" method="POST" action="/chefs" enctype="multipart/form-data">
     <section>
         <div class="create_recipe">
         <h3>Creating a new chef</h3>
