--- a/src/app/views/admin/show.njk
+++ b/src/app/views/admin/show.njk
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+{# comment #}
+
   <main class="container recipe">
     <div class="banner__recipe">
       <span>Recipe: {{ recipe.title }}</span>
