--- a/src/app/views/user/recipe.njk
+++ b/src/app/views/user/recipe.njk
@@ -8,10 +8,10 @@
 
   <main class="container recipe">
     <div class="banner">
-      <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
+      <img src="{{ files.image }}" alt="{{ recipe.title }}">
     </div>
     <h1>{{ recipe.title }}</h1>
-    <p>by {{ recipe.author }}</p>
+    <p>by {{ recipe.chef_id }}</p>
 
     <section class="recipe-section">
       <h2>Ingredients</h2>
