--- a/src/app/views/admin/show.njk
+++ b/src/app/views/admin/show.njk
@@ -13,7 +13,7 @@
       <a href="{{recipe.id}}/edit" class="button">Edit Recipe</a>
     </div>
     <div class="banner__img">
-      <img src="{{ file.path }}" alt="{{ recipe.author }}">
+      <img src="{{ file.name }}" alt="{{ recipe.author }}">
     </div>
     <h1>{{ recipe.title }}</h1>
     <div class="chef_name">
